# simplecss

./: CHANGELOG.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
examples/: parse.rs  select.rs
src/: lib.rs  selector.rs  stream.rs
tests/: declaration_tokenizer.rs  select.rs  selector_tokenizer.rs  specificity.rs  stylesheet.rs  warnings.rs
