[package]
name = "simplecss"
version = "0.2.1"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A simple CSS 2 parser and selector."
repository = "https://github.com/RazrFalcon/simplecss"
keywords = ["css", "parser", "selector"]
categories = ["parser-implementations"]
edition = "2021"
exclude = ["testing-tools/**"]
rust-version = "1.65"

[features]
default = ["std"]
std = ["log/std"]

[dependencies]
log = { version = "0.4.8", default-features = false }

[dev-dependencies]
env_logger = { version = "0.6", default-features = false }
roxmltree = "0.7"
